# static_queue

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: static_queue.c  static_queue.h
test/: test_static_queue.c
